Fixed margin right to arrow icon when then heading is collapsed

--- a/client/my-sites/sidebar-unified/style.scss
+++ b/client/my-sites/sidebar-unified/style.scss
@@ -266,7 +266,7 @@ $font-size: rem( 14px );
 			}
 		}
 
-		.sidebar__menu.is-togglable.is-toggle-open .sidebar__expandable-arrow {
+		.sidebar__menu.is-togglable .sidebar__expandable-arrow {
 			margin-right: 10px;
 		}
 
